Ignore placeholder text in Accessibility tree

Bug: 753463
Test: when navigating text fields with a placeholder, this makes it so we don't get stuck. With ChromeVox with a working login screen, Search+right. Verify that we don't get stuck on the password text field.
Change-Id: Iae13558bdb513a733a2273e86770acfff3e11027
Reviewed-on: https://chromium-review.googlesource.com/617770
Commit-Queue: David Tseng <dtseng@chromium.org>
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Cr-Commit-Position: refs/heads/master@{#495742}
Former-commit-id: a9584c51d093c6c9c657bad06df55a50f710536c